Fix viewport bug on small devices; set languages to work

--- a/src/scss/about-me-page.scss
+++ b/src/scss/about-me-page.scss
@@ -95,13 +95,13 @@
 
 @media (min-width: 768px){
   .about-me-container{
-    padding: 0 100px;
+    padding: 100px 10vw;
   }
 }
 
 @media (min-width: 1024px){
   .about-me-container{
-    padding: 100px 10vw;
+    
     width: 100%;
     display: flex;
     flex-direction: row;
