--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,6 +13,7 @@
 
 html{
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body{
@@ -48,13 +49,9 @@ section{
   bottom: 0;
   left: 0;
 
-  min-width: 100vw;
+  //width: 100vw;
   height: auto;
-
-  line-height: 0;
-  font-size: 0;
   overflow: hidden;
-  margin: 0;
 }
 
 .cta{
@@ -121,5 +118,16 @@ section > div > *{
   .social-icons{
     display: none;
   }
+
+  /*.bg-curve{
+    display: block;
+    bottom: 0;
+    left: 0;
+  
+    min-width: 100vw;
+    height: auto;
+    overflow: hidden;
+  }*/
 }
+
 
